[tool.poetry]
name = "zen_dash"
version = "0.3.14"
description = "Simple yet scable and production ready python dashboard that is better than shiny application for business."
readme = "README.md"
authors = ["Zen <zenreportz@pm.me>"]
homepage = "https://zen-reportz.github.io/zen_dash/index.html"
repository = "https://github.com/Zen-Reportz/zen_dash"
include = [
    { path = 'zen_dash/static/*.html', format = 'sdist' },
    { path = 'zen_dash/static/*.js', format = 'sdist' },
    { path = 'zen_dash/static/*.css', format = 'sdist' },
    { path = 'zen_dash/static/*.ico', format = 'sdist' },
    { path = 'zen_dash/static/*.woff2', format = 'sdist' },
    { path = 'zen_dash/static/*.woff', format = 'sdist' },

]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
Jinja2 = "^3.1.1"
sphinx-rtd-theme = "^1.0.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.2.0"
uvicorn = "^0.17.6"
autopep8 = "^1.6.0"
Sphinx = "^5.0.2"

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
